# RiboStructMapper

./: .dockerignore  .gitignore  APP_OVERVIEW.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  alignment.py  check_bfactor.py  docker-compose.yml  generate_mock_data.py  injector.py  main_cli.py  parser.py  processor.py  pyproject.toml  reproduce_real.py  requirements.txt  server.py  test_alignment.py  test_cleanup.py  test_complete_workflow.py  test_endpoints.py  test_injector.py  test_parser.py  test_parser_extended.py  test_processor.py  test_server.py
data/mock/: cds_only.fasta  mock.bedgraph
data/real/: GSE100626_SRX2965777.bedgraph  RPL4A_sequence.fasta
docs/: DEPLOYMENT.md  DOCKER.md  QUICK_START.md  README.md  SERVER_USAGE.md  specifications.md
jobs/e7a7f5c8-d053-4fd5-9fdc-ef87c3f6e560/: input.fasta  output_files.txt
jobs/f0109deb-fbbc-4cf4-a833-bad904a34213/: input.gtf  output_files.txt  params.txt
ribostruct/: __init__.py
ribostruct/cli/: __init__.py  main.py
ribostruct/core/: __init__.py  alignment.py  injector.py  parser.py  processor.py
ribostruct/web/: __init__.py  server.py
ribostruct/web/static/: index.html
scripts/: generate_mock_data.py  mock.fasta  test_fasta_only.py
static/: index.html
tests/api/: test_endpoints.py  test_server.py  test_server_manual.py
tests/integration/: test_cleanup.py  test_complete_workflow.py
tests/unit/: test_alignment.py  test_injector.py  test_offset_direction.py  test_parser.py  test_parser_extended.py  test_parser_fasta_only.py  test_processor.py  test_sanitize.py
